NAS-113654: Fixed styles for password autocomplete that overlap the bottom border of the field (#6402)

--- a/src/assets/styles/other/_material-reduction.scss
+++ b/src/assets/styles/other/_material-reduction.scss
@@ -487,6 +487,8 @@ tooltip button i {
 
 .mat-form-field-appearance-legacy .mat-form-field-infix {
   border: 0;
+  height: 20px;
+  overflow: hidden;
   padding: 0;
 }
 
